// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`configureStore persistor should contain persistor 1`] = `
Object {
  "dispatch": [Function],
  "flush": [Function],
  "getState": [Function],
  "pause": [Function],
  "persist": [Function],
  "purge": [Function],
  "replaceReducer": [Function],
  "subscribe": [Function],
  Symbol(observable): [Function],
}
`;

exports[`configureStore store should contain store 1`] = `
Object {
  "dispatch": [Function],
  "getState": [Function],
  "replaceReducer": [Function],
  "subscribe": [Function],
  Symbol(observable): [Function],
}
`;
